# pms

./: .env-sample  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  start_api.sh
app/: celery.py  settings.py  urls.py
app/api/: constants.py  models.py  permissions.py  tenant.py  urls.py  viewmixins.py
app/api/authentication/: apps.py  backends.py  models.py  schema.py  serializers.py  signals.py  urls.py  views.py
app/api/authentication/management/commands/: seed_data.py
app/api/authentication/migrations/: 0001_initial.py  0002_initial.py
app/api/authentication/tests/: base_test.py  test_login.py  test_signup.py
app/api/maintenance/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  transitions.py  views.py
app/api/maintenance/migrations/: 0001_initial.py
app/api/maintenance/tests/: base_test.py  test_maintenance_requests.py  test_work_orders.py
app/api/organization/: admin.py  apps.py  models.py  serializers.py  views.py
app/api/organization/migrations/: 0001_initial.py
app/api/organization/tests/: base_test.py  test_organizations.py  test_properties.py
